--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-openai>=1.54.0
-langchain-openai>=0.2.10
-langchain>=0.3.27
-langchain-core>=0.3.76
-langchain-community>=0.3.7
-azure-functions
-faiss-cpu
+openai==1.108.0
+langchain-openai==0.3.33
+langchain==0.3.27
+langchain-core==0.3.76
+langchain-community==0.3.29
+azure-functions==1.23.0
+faiss-cpu==1.9.0.post1
