--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ langchain-core==0.3.76
 langchain-community==0.3.29
 azure-functions==1.23.0
 faiss-cpu==1.9.0.post1
+
+
+az functionapp config appsettings set \
+  -g aiadvisor1 -n email-example-uploader \
+  --settings WEBSITE_RUN_FROM_PACKAGE=1
